# droit-francais-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  api_judilibre.py  api_legifrance.py  api_legifrance_query_builder.py  droit_francais_MCP.py  fastmcp.json  install.ps1  install.sh  piste_auth.py  piste_utils.py  pyproject.toml  requirements-dev.txt  test_api_judilibre.py  test_api_legifrance.py  test_characterization.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CAPABILITY_MAP.md
docs/audits/: 2026-05-28-compound-refactor-droit-francais-mcp.md  2026-05-28-revamp-compound-refactor-droit-francais-mcp.md
docs/brainstorms/: 2026-05-29-agentic-law-typescript-port-requirements.md
examples/: jupyter_exploration.py
src/droit_francais_mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
src/droit_francais_mcp/judilibre/: __init__.py  client.py
src/droit_francais_mcp/legifrance/: __init__.py  client.py  descriptions.py  query_builder.py
src/droit_francais_mcp/piste/: __init__.py  auth.py  filters.py
tests/: conftest.py  test_characterization.py  test_judilibre_client.py  test_judilibre_client_integration.py  test_legifrance_client.py  test_legifrance_client_integration.py  test_legifrance_query_builder.py  test_main_module.py  test_piste_auth.py  test_piste_filters.py  test_public_api.py  test_resources.py  test_tools.py
